force-app/main/default/objects/genesis__Applications__c/fields/genesis__Accrual_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Accrual_Type__c</fullName>
    <description>Accrual To Date - If the user selects &quot;Accrual To Date&quot; on the contract, it would mean that the interest amount that would get posted on an IPD would be equal to the amount accrued till the previous date.
        Accrual Through Date - If the user selects &quot;Accrual Through Date&quot; on the contract, it would mean that that the interest amount that would get posted on an IPD would be equal to the amount accrued till that date.</description>
    <label>Accrual Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accrual To Date</fullName>
            </value>
            <value>
                <fullName>Accrual Through Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>