force-app/main/default/objects/genesis__Applications__c/fields/genesis__Advance_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Advance_Payment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to store advance payment amount</description>
    <label>Advance Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>