force-app/main/default/objects/genesis__Applications__c/fields/genesis__Advance_Value__c.field-meta.xml
<CustomField>
    <fullName>genesis__Advance_Value__c</fullName>
    <description>This field is used to display the sum of all advance value of all the collaterals associated with the application</description>
    <inlineHelpText>This field is used to display the sum of all advance value of all the collaterals associated with the application</inlineHelpText>
    <label>Advance Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>