force-app/main/default/objects/genesis__Applications__c/fields/genesis__Adverse_Action_Based_On_Outside_Info__c.field-meta.xml
<CustomField>
    <fullName>genesis__Adverse_Action_Based_On_Outside_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will determine if outside (third-party) information was used to reject the application.</description>
    <label>Adverse Action Based On Outside Info</label>
    <type>Checkbox</type>
</CustomField>