force-app/main/default/objects/genesis__Applications__c/fields/genesis__Adverse_Action_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Adverse_Action_Return_Date__c</fullName>
    <description>This field will document the date by which the applicant must provide the missing information in order for the application to be processed.</description>
    <inlineHelpText>This field will document the date by which the applicant must provide the missing information in order for the application to be processed.</inlineHelpText>
    <label>Adverse Action Return Date</label>
    <type>Date</type>
</CustomField>