force-app/main/default/objects/genesis__Applications__c/fields/genesis__Adverse_Action_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Adverse_Action_Sent_Date__c</fullName>
    <description>This date will be updated when the adverse action notice is sent.</description>
    <inlineHelpText>This date will be updated when the adverse action notice is sent.</inlineHelpText>
    <label>Adverse Action Sent Date</label>
    <type>Date</type>
</CustomField>