force-app/main/default/objects/genesis__Applications__c/fields/genesis__Adverse_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Adverse_Action_Type__c</fullName>
    <description>This field will store the type of adverse action taken</description>
    <label>Adverse Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Counter-offer</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>