force-app/main/default/objects/genesis__Applications__c/fields/genesis__Annual_Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>genesis__Annual_Debt_Service__c</fullName>
    <description>It stores annual debt service calculation for application.</description>
    <formula>IF(ISPICKVAL( genesis__Product_Type__c , &apos;LOAN&apos;), genesis__Payment_Amount__c*12, genesis__Credit_Limit__c* (genesis__Interest_Rate__c/100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Debt Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>