force-app/main/default/objects/genesis__Applications__c/fields/genesis__Application_Properties__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application_Properties__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is a reference to the application properties that will hold application related data specific to integrations</description>
    <label>Application Properties</label>
    <referenceTo>clcommon__Application_Properties__c</referenceTo>
    <relationshipName>Application_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>