force-app/main/default/objects/genesis__Applications__c/fields/genesis__Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>genesis__Appraised_Value__c</fullName>
    <description>This field is used to display the sum of the appraised value of all collaterals associated with the Application.</description>
    <inlineHelpText>This field is used to display the sum of the appraised value of all collaterals associated with the Application.</inlineHelpText>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>