force-app/main/default/objects/genesis__Applications__c/fields/genesis__Available_Value__c.field-meta.xml
<CustomField>
    <fullName>genesis__Available_Value__c</fullName>
    <description>This field is used to display the available value across all collaterals.</description>
    <formula>genesis__Appraised_Value__c - genesis__Superior_Liens__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display the available value across all collaterals.</inlineHelpText>
    <label>Available Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>