force-app/main/default/objects/genesis__Applications__c/fields/genesis__Balloon_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Balloon_Payment_Type__c</fullName>
    <description>This field is to describe the method to calculate balloon payments schedule</description>
    <label>Balloon Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balloon Amount Including Only Principal</fullName>
            </value>
            <value>
                <fullName>Balloon Amount Including Principal and Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>