force-app/main/default/objects/genesis__Applications__c/fields/genesis__Bank_Hours__c.field-meta.xml
<CustomField>
    <fullName>genesis__Bank_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bank hours at the application level.</description>
    <label>Bank Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>