force-app/main/default/objects/genesis__Applications__c/fields/genesis__Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>genesis__Base_Rate__c</fullName>
    <description>This field must display the base rate of the selected interest index</description>
    <label>Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>