force-app/main/default/objects/genesis__Applications__c/fields/genesis__Borrowing_Entity_Summary__c.field-meta.xml
<CustomField>
    <fullName>genesis__Borrowing_Entity_Summary__c</fullName>
    <description>This field represents the Summary of Borrowing Entity. Only Applicable for Review Application.</description>
    <inlineHelpText>This field represents the Summary of Borrowing Entity. Only Applicable for Review Application.</inlineHelpText>
    <label>Borrowing Entity Summary</label>
    <length>32678</length>
    <type>Html</type>
</CustomField>