force-app/main/default/objects/genesis__Applications__c/fields/genesis__Cloning_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>genesis__Cloning_Application_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify if it is a cloned application or not and what was cloning application id</description>
    <inlineHelpText>Application is cloned from this ID</inlineHelpText>
    <label>Cloning Application ID</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Applications (Cloning Application ID)</relationshipLabel>
    <relationshipName>Application_clone</relationshipName>
    <type>Lookup</type>
</CustomField>