force-app/main/default/objects/genesis__Applications__c/fields/genesis__Collateral_Coverage__c.field-meta.xml
<CustomField>
    <fullName>genesis__Collateral_Coverage__c</fullName>
    <description>This field is used to display the amount covered by Collaterals.</description>
    <formula>genesis__Advance_Value__c - genesis__Superior_Liens__c - IF(ISPICKVAL(genesis__Product_Type__c,&apos;LINE OF CREDIT&apos;) ,genesis__Credit_Limit__c,genesis__Loan_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display the amount covered by Collaterals.</inlineHelpText>
    <label>Collateral Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>