force-app/main/default/objects/genesis__Applications__c/fields/genesis__Contracts__c.field-meta.xml
<CustomField>
    <fullName>genesis__Contracts__c</fullName>
    <description>This field will store the serialized list of contracts.</description>
    <label>Contracts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>