force-app/main/default/objects/genesis__Applications__c/fields/genesis__Customer_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Customer_Enrollment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was used to store the status of the application sending status details to UUX. It is deprecated as treasury no longer uses this boolean. Enrollment status is now checked using customer ID in business information.</description>
    <label>(Deprecated) Customer Enrollment Status</label>
    <type>Checkbox</type>
</CustomField>