force-app/main/default/objects/genesis__Applications__c/fields/genesis__Exclude__c.field-meta.xml
<CustomField>
    <fullName>genesis__Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Include/Exclude from the debt service calculations.</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>