force-app/main/default/objects/genesis__Applications__c/fields/genesis__Expected_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Expected_Commencement_Date__c</fullName>
    <description>This field represents the date on which the Lease contract is expected to start</description>
    <inlineHelpText>This field represents the date on which the Lease contract is expected to start</inlineHelpText>
    <label>Expected Commencement Date</label>
    <type>Date</type>
</CustomField>