force-app/main/default/objects/genesis__Applications__c/fields/genesis__Exposure_Applications__c.field-meta.xml
<CustomField>
    <fullName>genesis__Exposure_Applications__c</fullName>
    <description>This field stores the list of Applicatons in json format for Exposure calculation.</description>
    <inlineHelpText>This field stores the list of related applications in json format for Exposure calculation.</inlineHelpText>
    <label>Exposure Applications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>