force-app/main/default/objects/genesis__Applications__c/fields/genesis__Exposure_Contracts__c.field-meta.xml
<CustomField>
    <fullName>genesis__Exposure_Contracts__c</fullName>
    <description>This field stores the list of Interface Contracts in json format for Exposure calculation</description>
    <inlineHelpText>This field stores the list of related Interface Contracts in json format for Exposure calculation.</inlineHelpText>
    <label>Exposure Contracts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>