force-app/main/default/objects/genesis__Applications__c/fields/genesis__Financial_Information__c.field-meta.xml
<CustomField>
    <fullName>genesis__Financial_Information__c</fullName>
    <description>This field represents the financial information. Only Applicable for Review Application.</description>
    <inlineHelpText>This field represents the financial information. Only Applicable for Review Application.</inlineHelpText>
    <label>Financial Information</label>
    <length>32678</length>
    <type>Html</type>
</CustomField>