force-app/main/default/objects/genesis__Applications__c/fields/genesis__Global_Indirect_Exposure__c.field-meta.xml
<CustomField>
    <fullName>genesis__Global_Indirect_Exposure__c</fullName>
    <description>This field stores sum of all indirect exposures of all selected parties</description>
    <inlineHelpText>This field stores sum of all indirect exposures of all selected parties</inlineHelpText>
    <label>Global Indirect Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>