force-app/main/default/objects/genesis__Applications__c/fields/genesis__Group__c.field-meta.xml
<CustomField>
    <fullName>genesis__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to group.</description>
    <label>Group</label>
    <referenceTo>genesis__Group__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>