force-app/main/default/objects/genesis__Applications__c/fields/genesis__Index_Linked__c.field-meta.xml
<CustomField>
    <fullName>genesis__Index_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox must be displayed only if interest rate type is “Fixed”. If this true, then additional fields related to Index, Base rate, spread and margin must be displayed</description>
    <label>Index Linked</label>
    <type>Checkbox</type>
</CustomField>