force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_in_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will determine if the Loan has an Interest in Advance facility</description>
    <inlineHelpText>This field will determine if the Loan has an Interest in Advance facility</inlineHelpText>
    <label>Interest in Advance</label>
    <type>Checkbox</type>
</CustomField>