force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Index__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a reference field to floating rate index.</description>
    <label>Interest Index</label>
    <referenceTo>clcommon__Floating_Rate_Index__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>