force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Rate_Type__c</fullName>
    <description>This dropdown must have 3 values: Fixed/ Floating/Rate Schedule. The default value is “Fixed”</description>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Rate Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>