force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interface_Contract__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interface_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references to the interface contract.</description>
    <inlineHelpText>This field references to the interface contract.</inlineHelpText>
    <label>Interface Contract</label>
    <referenceTo>staging__Interface_Contract__c</referenceTo>
    <relationshipLabel>Review Applications</relationshipLabel>
    <relationshipName>Review_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>