force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Booked_to_Core__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Booked_to_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field represents whether application exists in core or not.</description>
    <inlineHelpText>This field represents whether application exists in core or not.</inlineHelpText>
    <label>Is Booked to Core</label>
    <type>Checkbox</type>
</CustomField>