force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Loan_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Loan_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the Loan review is done or not.</description>
    <inlineHelpText>This field indicates if the Loan review is done or not.</inlineHelpText>
    <label>Is Loan Review Completed</label>
    <type>Checkbox</type>
</CustomField>