force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Review_Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Review_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields indicates if the application is a review application or not.</description>
    <inlineHelpText>This fields indicates if the application is a review application or not.</inlineHelpText>
    <label>Is Review Application</label>
    <type>Checkbox</type>
</CustomField>