force-app/main/default/objects/genesis__Applications__c/fields/genesis__Lender_Comments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Lender_Comments__c</fullName>
    <description>This field will capture any additional observations that the lender may want to record on the application as part of adverse action</description>
    <label>Lender Comments</label>
    <type>TextArea</type>
</CustomField>