force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Booking_Date__c</fullName>
    <description>This field represents the date when the loan was booked.</description>
    <inlineHelpText>This field represents the date when the loan was booked.</inlineHelpText>
    <label>Loan Booking Date</label>
    <type>Date</type>
</CustomField>