force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Details_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Details_Snapshot__c</fullName>
    <description>This field contains json snapshots of all the fields to be read from the Interface Contract in context of Review Application.</description>
    <inlineHelpText>This field contains json snapshots of all the fields to be read from the Interface Contract in context of Review Application.</inlineHelpText>
    <label>Loan Details Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>