force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Review_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Review_Completion_Date__c</fullName>
    <description>This field represents the date when the loan review was completed.</description>
    <inlineHelpText>This field represents the date when the loan review was completed.</inlineHelpText>
    <label>Loan Review Completion Date</label>
    <type>Date</type>
</CustomField>