force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Review_Status__c</fullName>
    <description>This field indicates the current status of Loan Review. Accepted values : New, In Progress , Completed</description>
    <inlineHelpText>This field indicates the current status of Loan Review. Accepted values : New, In Progress , Completed</inlineHelpText>
    <label>Loan Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>