force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Review_Summary__c</fullName>
    <description>This field represents the Summary of Loan Review Application. Only Applicable for Review Application.</description>
    <inlineHelpText>This field represents the Summary of Loan Review Application. Only Applicable for Review Application.</inlineHelpText>
    <label>Loan Review Summary</label>
    <length>32678</length>
    <type>Html</type>
</CustomField>