force-app/main/default/objects/genesis__Applications__c/fields/genesis__LOC_Fixed_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__LOC_Fixed_Payment_Amount__c</fullName>
    <description>This field stores the fixed payment amount that is applicable when the &quot;LOC Payment Type&quot; has the following picklist values

1) Fixed Amount Plus Accrued Interest
2) Fixed Amount
3) Fixed Amount per $1000 of Outstanding Balance
4) Percentage of the Outstanding Balance Plus Accrued Interest
5) Greater of Fixed Amount or Accrued Interest</description>
    <label>LOC Fixed Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>