force-app/main/default/objects/genesis__Applications__c/fields/genesis__LOC_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__LOC_Payment_Type__c</fullName>
    <description>This field will store the different LOC Payment methods applicable in servicing.</description>
    <label>LOC Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accrued Interest Only</fullName>
            </value>
            <value>
                <fullName>Fixed Amount Plus Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Fixed Amount per $1000 of Outstanding Balance</fullName>
            </value>
            <value>
                <fullName>Fixed Fraction of outstanding Principal Balance Plus Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Greater of a Fixed Amount or Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Greater of a Percentage of the Outstanding Balance or a Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Greater of a Percentage of the Outstanding Balance Plus Accrued Interest or a Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Greater of a Percentage of the Outstanding Balance or Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Percentage of the Outstanding Balance</fullName>
            </value>
            <value>
                <fullName>Percentage of the Outstanding Balance Plus Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Others (as specified)</fullName>
            </value>
            <value>
                <fullName>Balloon</fullName>
            </value>
            <value>
                <fullName>Amortized Payment (Principal and Interest)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>