force-app/main/default/objects/genesis__Applications__c/fields/genesis__Minimum_Interest_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Minimum_Interest_Charge_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will be used to capture the minimum interest that will be charged in a open ended Loan</description>
    <inlineHelpText>This field will be used to capture the minimum interest that will be charged in a open ended Loan</inlineHelpText>
    <label>Minimum Interest Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>