force-app/main/default/objects/genesis__Applications__c/fields/genesis__Move_Across_Month__c.field-meta.xml
<CustomField>
    <fullName>genesis__Move_Across_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines whether the schedule&apos;s due date should get moved across the month, if due date is lying on holiday.</description>
    <inlineHelpText>This field defines whether the schedule&apos;s due date should get moved across the month, if due date is lying on holiday.</inlineHelpText>
    <label>Move Across Month</label>
    <type>Checkbox</type>
</CustomField>