force-app/main/default/objects/genesis__Applications__c/fields/genesis__Nature_of_Credit_Facility__c.field-meta.xml
<CustomField>
    <fullName>genesis__Nature_of_Credit_Facility__c</fullName>
    <description>This field determines if the credit facility is revolving or non-revolving in nature.</description>
    <label>Nature of Credit Facility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revolving</fullName>
            </value>
            <value>
                <fullName>Non-Revolving</fullName>
                <default>true</default>
                <label>Non-Revolving</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>