force-app/main/default/objects/genesis__Applications__c/fields/genesis__Next_Loan_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Next_Loan_Review_Date__c</fullName>
    <description>This field indicates the Date of Next Loan Review.</description>
    <inlineHelpText>This field indicates the Date of Next Loan Review.</inlineHelpText>
    <label>Next Loan Review Date</label>
    <type>Date</type>
</CustomField>