force-app/main/default/objects/genesis__Applications__c/fields/genesis__Number_of_Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Number_of_Advance_Payments__c</fullName>
    <description>This field is used to store number of Advance payments</description>
    <label>Number of Advance Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>