force-app/main/default/objects/genesis__Applications__c/fields/genesis__Number_of_Remaining_Payments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Number_of_Remaining_Payments__c</fullName>
    <description>This field is used to store Number of Remaining Payments</description>
    <label>Number of Remaining Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>