force-app/main/default/objects/genesis__Applications__c/fields/genesis__Original_Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Original_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references to the Original Loan Application</description>
    <inlineHelpText>This field references to the Original Loan Application</inlineHelpText>
    <label>Original Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Applications (Original Application Reference)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>