force-app/main/default/objects/genesis__Applications__c/fields/genesis__Other_Purpose__c.field-meta.xml
<CustomField>
    <fullName>genesis__Other_Purpose__c</fullName>
    <description>This field stores details of purpose if other purpose is selected.</description>
    <inlineHelpText>This field stores details of purpose if other purpose is selected.</inlineHelpText>
    <label>Other Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>