force-app/main/default/objects/genesis__Applications__c/fields/genesis__Other_Reasons__c.field-meta.xml
<CustomField>
    <fullName>genesis__Other_Reasons__c</fullName>
    <description>This field will capture free-form rejection reasons if &quot;Other&quot; Reason Code is selected</description>
    <label>Other Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>